--- a/src/index.scss
+++ b/src/index.scss
@@ -119,6 +119,7 @@ main {
   p {
     color: #5c5c5c;
     text-align: center;
+    max-width: 80vw;
   }
 }
 
